tv static complete

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- https://www.onlinewebfonts.com/download/e3084d24cd24af3f49f46b241334057b -->
   <link href="https://db.onlinewebfonts.com/c/e3084d24cd24af3f49f46b241334057b?family=Friz+Quadrata+No.+2+W01" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Jost&family=Flamenco&family=Kreon:wght@300&family=Lexend:wght@300&family=Zilla+Slab:wght@400;500&family=Lusitana:wght@400;700&family=IM+Fell+DW+Pica:ital@0;1&family=Sofia+Sans+Extra+Condensed:wght@300;500&family=Cardo:ital,wght@0,400;0,700;1,400&family=Alata&family=Jost&family=Poltawski+Nowy:wght@600&family=Ysabeau+Infant:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Jost&family=Charm&family=Kreon:wght@300&family=Lexend:wght@300&family=Zilla+Slab:wght@400;500&family=Lusitana:wght@400;700&family=IM+Fell+DW+Pica:ital@0;1&family=Sofia+Sans+Extra+Condensed:wght@300;500&family=Cardo:ital,wght@0,400;0,700;1,400&family=Alata&family=Jost&family=Poltawski+Nowy:wght@600&family=Ysabeau+Infant:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
   <link rel="icon" type="image/x-icon" href="assets/favicon.png">
   <link rel="stylesheet" href="index.css">
@@ -25,51 +25,115 @@
     </div>
 
     <div id="link_block">
-      <a href="https://musescore.com/trngl" target="_blank"><div class="link_icon" id="musescore"><span>Musescore</span></div></a>
-      <a href="https://github.com/tirangol" target="_blank"><div class="link_icon" id="github"><span>Github</span></div></a>
-      <a href="https://www.youtube.com/@tirangol" target="_blank"><div class="link_icon" id="youtube"><span>Youtube</span></div></a>
+      <a href="https://musescore.com/trngl" target="_blank">
+        <div class="link_icon" id="musescore"><span>Musescore</span></div>
+      </a>
+      <a href="https://github.com/tirangol" target="_blank">
+        <div class="link_icon" id="github"><span>Github</span></div>
+      </a>
+      <a href="https://www.youtube.com/@tirangol" target="_blank">
+        <div class="link_icon" id="youtube"><span>Youtube</span></div>
+      </a>
     </div>
     <div id="setting_block">
-      <div class="setting_icon" id="language" onclick='language()'><span>Language</span></div> <!-- Old map papers thrown on left half -->
-      <div class="setting_icon" id="sources" onclick='sources()'><span>Sources</span></div> <!-- Newspapers thrown on left half -->
-	  <!--
+      <div class="setting_icon" id="language" onclick='language()'><span>Language</span></div>
+      <!-- Old map papers thrown on left half -->
+      <div class="setting_icon" id="sources" onclick='sources()'><span>Sources</span></div>
+      <!-- Newspapers thrown on left half -->
+      <!--
 	  https://news.google.com/newspapers?hl=en
 	  https://earth.google.com/web/data=CiQSIhIgY2NjOGJhYWVhYjg5MTFlODg4N2U3MWQ2MDFiMTRkNzU
 	  -->
     </div>
-	
-	<div id='about_submenu_quitter' onclick='aboutSubmenuBack()'></div>
-	<div id='about_submenu'>
-	  <div id='sources_block'>
-		<h3>Sources</h3>
-		<p>Something</p>
-	  </div>
-	  <div class='paper' id='paper1'>
-		<h3 class='language_select language_select_active' onclick='english()'>English</h3>
-		<h3 class='language_select' onclick='french()'>Français</h3>
-		<h3 class='language_select' onclick='chinese()'>中文</h3>
-	  </div>
-	  <div class='paper' id='paper2'></div>
-	  <div class='paper' id='paper3'></div>
-	  <div class='paper' id='paper4'></div>
-	  <div class='paper' id='paper5'></div>
-	  <div class='paper' id='papercover'></div>
-	</div>
-	
+
+    <div id='about_submenu_quitter' onclick='aboutSubmenuBack()'></div>
+    <div id='about_submenu'>
+      <div id='sources_block_container'>
+        <div id='sources_block'>
+          <h3>Sources</h3>
+          <p id='sources_block_p'>This list is not exhaustive. I forgot many sources.</p>
+          <div id='sources_block_box'>
+            <div id='sources_block_left'>
+              <h4>Fonts</h4>
+              <p>Zilla Slab</p><br>
+              <p>Kreon</p><br>
+              <p>Lexend</p><br>
+              <p>IM Fell DW Pica</p><br>
+              <p>Ysabeau Infant</p><br>
+              <p>Sofia Sans Extra Condensed</p><br>
+              <p>Friz Quadrata No. 2 W01</p><br>
+              <p>Cardo</p><br>
+              <p>Lusitana</p><br>
+              <p>Poltawski Nowy</p><br>
+              <p>Dancing Script</p><br>
+              <p>Charm</p>
+            </div>
+            <div id='sources_block_right'>
+              <h4>Images</h4>
+              <div id='sources_block_main_page' class='sources_block_active' onclick='sourcesMainPage()'>
+                <h5>Main Page</h5>
+                <p><a href='https://wall.alphacoders.com/big.php?i=232622' target='_blank'>Wallpaper</a> - Tekkon
+                  Kinkreet</p>
+              </div>
+              <div id='sources_block_about' onclick='sourcesAbout()'>
+                <h5>About</h5>
+                <p><a href='https://news.google.com/newspapers?hl=en' target='_blank'>Newspapers</a> - Google News
+                  Archive</p>
+                <p><a href='https://earth.google.com/web/data=CiQSIhIgY2NjOGJhYWVhYjg5MTFlODg4N2U3MWQ2MDFiMTRkNzU'
+                    target='_blank'>Maps</a> - David Rumsey Map Collection</p>
+                <p><a href='https://stock.adobe.com/images/old-vintage-television/84248436'
+                    target='_blank'>Television</a></p>
+                <p><a
+                    href='https://www.istockphoto.com/photo/retro-old-outdated-classic-television-receiver-with-tv-antenna-from-circa-60s-of-xx-gm1215478440-354030691'
+                    target='_blank'>Television Stand</a></p>
+                <p><a
+                    href='https://www.shutterstock.com/image-illustration/empty-room-rustic-style-old-wooden-423393043'
+                    target='_blank'>Room</a></p>
+              </div>
+              <div id='sources_block_projects' onclick='sourcesProjects()'>
+                <h5>Projects</h5>
+              </div>
+              <div id='sources_block_music' onclick='sourcesMusic()'>
+                <h5>Music</h5>
+                <p><a href='https://stablediffusionweb.com/' target='_blank'>Cover Albums</a> - Stable Diffusion</p>
+              </div>
+              <div id='sources_block_resources' onclick='sourcesResources()'>
+                <h5>Resources</h5>
+              </div>
+              <div id='sources_block_resume' onclick='sourcesResume()'>
+                <h5>Resume</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class='paper' id='paper1'>
+        <h3 class='language_select language_select_active' onclick='english()'>English</h3>
+        <h3 class='language_select' onclick='french()'>Français</h3>
+        <h3 class='language_select' onclick='chinese()'>中文</h3>
+      </div>
+      <div class='paper' id='paper2'></div>
+      <div class='paper' id='paper3'></div>
+      <div class='paper' id='paper4'></div>
+      <div class='paper' id='paper5'></div>
+      <div class='paper' id='papercover'></div>
+    </div>
+
     <div id="about">
       <h1>About</h1>
       <hr>
       <p>I like video games, classical music, and machine learning.</p>
       <p>And I study computer science and data science at the University of Toronto.</p>
       <p>I go by tirangol/trngl online.</p>
-      <p>Website coded by me.</p>
+      <p>Website coded by me. Graphics not by me.</p>
     </div>
     <div id='about_background'></div>
 
     <div class="tv" id="tv"></div>
-    <div class="tv" id="tv_screen" onclick='goToMenu(-1)'></div>
+    <div class="tv" id="tv_screen"></div>
     <div class="tv" id="tv_body"></div>
-    <!--<canvas class='tv' id='tv_static'></canvas>-->
+    <canvas id='tv_static' onclick='goToMenu(-1)' onmouseenter='turnTVOn()' onmouseleave='turnTVOff()'></canvas>
     <div id="stand"></div>
 
     <div id='music_block'>
@@ -112,7 +176,9 @@
         <div id='album_descriptions'>
           <h2>Classical Compositions, Solo</h2>
           <div id='album_descriptions_container'>
-		    <div id='album_descriptions_scroll_button' onmousedown='skipScroll()'><div></div></div>
+            <div id='album_descriptions_scroll_button' onmousedown='skipScroll()'>
+              <div></div>
+            </div>
             <div id='album_descriptions_scroller' onscroll='scrollAlbumDescription()'>
               <table>
                 <tr>
@@ -182,18 +248,21 @@
       <div id="c13" class="background_img"></div>
 
       <div id="name_block">
-        <div id="h1_wrapper">
-          <h1>Richard Yin</h1>
-        </div>
+        <h1>Richard Yin</h1>
         <span>Rice Cake Enthusiast, LaTeX Hater</span>
       </div>
 
       <div id="menu_block">
-        <h1 onmouseenter="enterSelect(0)" onmouseleave="leaveSelect()" onmousedown="selectMenu(event, 0)" onclick="goToMenu(0)">About</h1> <!-- Zoom out to TV -->
-        <h1 onmouseenter="enterSelect(1)" onmouseleave="leaveSelect()" onmousedown="selectMenu(event, 1)" onclick="goToMenu(1)">Projects</h1> <!-- Glitchy alternate reality -->
-        <h1 onmouseenter="enterSelect(2)" onmouseleave="leaveSelect()" onmousedown="selectMenu(event, 2)" onclick="goToMenu(2)">Music</h1> <!-- Zoom up -->
-        <h1 onmouseenter="enterSelect(3)" onmouseleave="leaveSelect()" onmousedown="selectMenu(event, 3)" onclick="goToMenu(3)">Resources</h1> <!-- Fire burning from right to left -->
-        <h1 onmouseenter="enterSelect(4)" onmouseleave="leaveSelect()" onmousedown="selectMenu(event, 4)" onclick="goToMenu(4)">Resume</h1> <!-- Zoom in slightly, rotate, off to side -->
+        <h1 onmouseenter="enterSelect(0)" onmouseleave="leaveSelect()" onmousedown="selectMenu(event, 0)"
+          onclick="goToMenu(0)">About</h1> <!-- Zoom out to TV -->
+        <h1 onmouseenter="enterSelect(1)" onmouseleave="leaveSelect()" onmousedown="selectMenu(event, 1)"
+          onclick="goToMenu(1)">Projects</h1> <!-- Glitchy alternate reality -->
+        <h1 onmouseenter="enterSelect(2)" onmouseleave="leaveSelect()" onmousedown="selectMenu(event, 2)"
+          onclick="goToMenu(2)">Music</h1> <!-- Zoom up -->
+        <h1 onmouseenter="enterSelect(3)" onmouseleave="leaveSelect()" onmousedown="selectMenu(event, 3)"
+          onclick="goToMenu(3)">Resources</h1> <!-- Fire burning from right to left -->
+        <h1 onmouseenter="enterSelect(4)" onmouseleave="leaveSelect()" onmousedown="selectMenu(event, 4)"
+          onclick="goToMenu(4)">Resume</h1> <!-- Zoom in slightly, rotate, off to side -->
         <canvas id="select_animation" height='250%' width='350%'></canvas>
       </div>
     </div>
