--- a/static.html
+++ b/static.html
@@ -16,9 +16,8 @@
 	<div id='bg'></div>
 	<canvas id='static' width='800' height='800'></canvas>
 	<div class='button' id='static1' onclick='turnTVOn()'>TV On</div>
-	<div class='button' id='static2' onclick='turnStaticOff()'>Static Off</div>
-	<div class='button' id='static3' onclick='turnStaticOn()'>Static On</div>
-	<div class='button' id='static4' onclick='turnTVOff()'>TV Off</div>
+	<div class='button' id='static2' onclick='turnTVOff()'>TV Off</div>
+	<div class='button' id='static3' onclick='turnTVDefault()'>TV Default</div>
 </body>
 
 
